--- a/project3.html
+++ b/project3.html
@@ -11,6 +11,7 @@
     <div class="flex-container">
         <nav id="navbar">
             <header>JS Documentation</header>
+            <div class="wrapper">
             <ul>
                 <li>
                     <a href="#introduction">Introduction</a>
@@ -55,6 +56,7 @@
                     <a href="#reference">Reference</a>
                 </li>
             </ul>
+          </div>
         </nav>
 
         <main id="main-doc">
