--- a/project3.html
+++ b/project3.html
@@ -14,53 +14,53 @@
             <div class="wrapper">
             <ul>
                 <li>
-                    <a href="#introduction">Introduction</a>
+                    <a class="nav-link" href="#Introduction">Introduction</a>
                 </li>
                 <li>
-                    <a href="#what-you-should-know">What you should already know</a>
+                    <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
                 </li>
                 <li>
-                    <a href="#javascript-and-java">Javascript and Java</a>
+                    <a class="nav-link" href="#Javascript_and_Java">Javascript and Java</a>
                 </li>
                 <li>
-                    <a href="#hello-world">Hello world</a>
+                    <a class="nav-link" href="#Hello_world">Hello world</a>
                 </li>
                 <li>
-                    <a href="#variables">Variables</a>
+                    <a class="nav-link" href="#Variables">Variables</a>
                 </li>
                 <li>
-                    <a href="#declaring-variables">Declaring variables</a>
+                    <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
                 </li>
                 <li>
-                    <a href="#variable-scope">Variable scope</a>
+                    <a class="nav-link" href="#Variable_scope">Variable scope</a>
                 </li>
                 <li>
-                    <a href="#global-variables">Global variables</a>
+                    <a class="nav-link" href="#Global_variables">Global variables</a>
                 </li>
                 <li>
-                    <a href="#constats">Constants</a>
+                    <a class="nav-link" href="#Constants">Constants</a>
                 </li>
                 <li>
-                    <a href="#data-types">Data types</a>
+                    <a class="nav-link" href="#Data_types">Data types</a>
                 </li>
                 <li>
-                    <a href="#if-else-statemente">if... else statement</a>
+                    <a class="nav-link" href="#if..._else_statement">if... else statement</a>
                 </li>
                 <li>
-                    <a href="#while-statement">while statemente</a>
+                    <a class="nav-link" href="#While_statement">While statement</a>
                 </li>               
                 <li>
-                    <a href="#function-declarations">Function Declarations</a>
+                    <a class="nav-link" href="#Function_declarations">Function declarations</a>
                 </li>
                 <li>
-                    <a href="#reference">Reference</a>
+                    <a class="nav-link" href="#Reference">Reference</a>
                 </li>
             </ul>
           </div>
         </nav>
 
         <main id="main-doc">
-            <section class="main-section" id="introduction">
+            <section class="main-section" id="Introduction">
                 <header>Introduction</header>
                 <article class="spacing">
                     <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them.</p>
@@ -75,7 +75,7 @@
                 </article>
             </section>
             
-            <section class="main-section" id="what-you-should-know">
+            <section class="main-section" id="What_you_should_already_know">
                 <header>What you should already know</header>
                 <p>This guide assumes you have the following basic background:</p>
 
@@ -87,7 +87,7 @@
 
 
             </section>
-            <section class="main-section" id="javascript-and-java">
+            <section class="main-section" id="Javascript_and_Java">
                 <header>Javascript and Java</header>
                 <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
 
@@ -95,7 +95,7 @@
 
                 <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
             </section>
-            <section class="main-section" id="hello-world">
+            <section class="main-section" id="Hello_world">
                 <header>Hello world</header>
                 <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code:</p>
 
@@ -113,8 +113,8 @@
                 <p>You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.</p>
             </section>
 
-            <section class="main-section" id="declaring-variables">
-                <header>Declaring Variables</header>
+            <section class="main-section" id="Declaring_variables">
+                <header>Declaring variables</header>
                 <p>You can declare a variable in three ways:</p>
                 <p>With the keyword var. For example,</p>
                 <code>var x = 42.</code>
@@ -129,7 +129,7 @@
                 <p>This syntax can be used to declare a block scope local variable. See Variable scope below.</p>
             </section>
 
-            <section class="main-section" id="variable-scope">
+            <section class="main-section" id="Variable_scope">
                 <header>Variable scope</header>
                 <p>When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function.</p>
 
@@ -143,14 +143,14 @@
                 not defined</code>
             </section>
 
-            <section class="main-section" id="global-variables">
+            <section class="main-section" id="Global_variables">
                 <header>Global variables</header>
                 <p>Global variables are in fact properties of the global object. In web pages the global object is window, so you can set and access global variables using the window.variable syntax.</p>
 
                 <p>Consequently, you can access global variables declared in one window or frame from another window or frame by specifying the window or frame name. For example, if a variable called phoneNumber is declared in a document, you can refer to this variable from an iframe as parent.phoneNumber.</p>
             </section>
 
-            <section class="main-section" id="constants">
+            <section class="main-section" id="Constants">
                 <header>Constants</header>
                 <p>You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters.</p>
 
@@ -173,7 +173,7 @@
             </code>
             </section>
 
-            <section class="main-section" id="data-types">
+            <section class="main-section" id="Data_types">
                 <header>Data types</header>
                 <p>The latest ECMAScript standard defines seven data types:</p>
                 <ul>
@@ -192,7 +192,7 @@
                 <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform.</p>
             </section>
 
-            <section class="main-section" id="if-else-statements">
+            <section class="main-section" id="if..._else_statement">
                 <header>if... else statement</header>
                 <p>Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows:</p>
 
@@ -233,8 +233,8 @@
                 </code>
             </section>
 
-            <section class="main-section" id="while-statement">
-                <header>while statement</header>
+            <section class="main-section" id="While_statement">
+                <header>While statement</header>
                 <p>A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows:</p>
                 <code class="multiline">
                     while (condition) statement
@@ -265,7 +265,7 @@
                 <p>After completing the third pass, the condition n < 3 is no longer true, so the loop terminates.</p>
             </section>
 
-            <section class="main-section" id="function-declarations">
+            <section class="main-section" id="Function_declarations">
                 <header>Function declarations</header>
                 <p>A function definition (also called a function declaration, or function statement) consists of the function keyword, followed by:</p>
                 <ul>
@@ -286,7 +286,7 @@
                 </code>
                 <p>Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function.</p>
             </section>
-            <section class="main-section" id="references">
+            <section class="main-section" id="Reference">
                 <header>Reference</header>
                 <ul>
                     <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a></li>
