how it works section complete

--- a/project4.html
+++ b/project4.html
@@ -40,7 +40,7 @@
                     <label for="email">
                         <input id="email" name="email" type="email" placeholder="Enter your email address" required />
                     </label>
-                    <input type="submit" value="Enviar">
+                    <input type="submit" value="ENVIAR">
                 </form>
         </section>
 
@@ -48,27 +48,93 @@
             <i class="fa-solid fa-fire" style="color: #ffa200d5;"></i>
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, volu?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi reprehenderit illum numquam ipsum autem hic nihil dolorem? Unde, fuga error.</p>
             </div>
 
             <i class="fa-solid fa-fire" style="color: #ffa200d5;"></i>
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, voluptatibus?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos officia maxime nihil iusto? Inventore quisquam sed et excepturi enim. Provident.</p>
             </div>
 
             <i class="fa-solid fa-fire" style="color: #ffa200d5;"></i>
             <div>
                 <h3>Lorem ipsum dolor sit amet.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, voluptatibus?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quasi molestias fuga mollitia! Facere delectus fugiat veritatis iste rem corporis?</p>
             </div>
         </section>
 
         <section id="how-it-works" class="espaciado-v">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, nisi?</p>
+            <div class="video-container">
+                <iframe class="video-responsive" width="560" height="315" src="https://www.youtube.com/embed/KkXYF6nzKfA?si=Yl7sW907G5NN2mu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </section>
 
         <section id="how-it-works" class="espaciado-v">
+            <div class="hiw-container">
+                <div class="hiw-content">
+                    <div class="hiw-content-section title">
+                        <h4>INFORMACION 1</h4>
+                    </div>
+                    <div class="hiw-content-section">
+                        <p>$200</p>
+                    </div>
+
+                    <div class="hiw-content-section">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </div>
+                    <div class="hiw-content-section">
+                        <button>SELECT</button>
+                    </div>
+                </div>
+
+                <div class="hiw-content">
+                    <div class="hiw-content-section title">
+                        <h4>INFORMACION 2</h4>
+                    </div>
+                    <div class="hiw-content-section">
+                        <p>$300</p>
+                    </div>
+
+                    <div class="hiw-content-section">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </div>
+                    <div class="hiw-content-section">
+                        <button>SELECT</button>
+                    </div>
+                </div>
+
+                <div class="hiw-content">
+                    <div class="hiw-content-section title">
+                        <h4>INFORMACION 3</h4>
+                    </div>
+                    <div class="hiw-content-section">
+                        <p>$400</p>
+                    </div>
+
+                    <div class="hiw-content-section">
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </div>
+                    <div class="hiw-content-section">
+                        <button>SELECT</button>
+                    </div>
+                </div>
+            </div>
             
         </section>
     </main>
