--- a/project4.html
+++ b/project4.html
@@ -140,8 +140,16 @@
     </main>
 
     <footer id="footer" class="centrado-horizontal">
-        <section class="espaciado-v">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, in?</p>
+        <section class="footer-content">
+            <div class="footer-content-section">
+                <ul>
+                    <li>Contact</li>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+
+                <p>Copyright 2016, Original Trombones</p> 
+            </div>    
         </section>
     </footer> 
     
