--- a/project4.html
+++ b/project4.html
@@ -12,35 +12,35 @@
     <header id="header">
         <div class="header-container">
             <div id="logo">
-                <img src="https://icons.iconarchive.com/icons/flat-icons.com/flat/256/Satellite-icon.png" alt="logo">
+                <img id="header-img" src="https://icons.iconarchive.com/icons/flat-icons.com/flat/256/Satellite-icon.png" alt="logo">
             </div>
 
             <div id="nav-dummy"></div>
             
-            <div id="nav-bar">
+            <nav id="nav-bar">
                 <ul class="navbar-container">
                     <li>
-                        <a href="#features">Features</a>
+                        <a class="nav-link" href="#features">Features</a>
                     </li>
                     <li>
-                       <a href="#how-it-works">How It Works</a>
+                       <a class="nav-link" href="#how-it-works">How It Works</a>
                     </li>
                     <li>
-                        <a href="#pricing">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </header>
 
     <main class="centrado-horizontal">
-        <section id="formulario" class="espaciado-v">
+        <section id="form" class="espaciado-v">
                 <h2>Drones de calidad superior</h2>
                 <form id="container-form" action="https://www.freecodecamp.com/email-submit" method="post" id="form" target="_blank">
                     <label for="email">
                         <input id="email" name="email" type="email" placeholder="Enter your email address" required />
                     </label>
-                    <input type="submit" value="ENVIAR">
+                    <input id="submit" type="submit" value="ENVIAR">
                 </form>
         </section>
 
@@ -66,7 +66,7 @@
 
         <section id="how-it-works" class="espaciado-v">
             <div class="video-container">
-                <iframe class="video-responsive" width="560" height="315" src="https://www.youtube.com/embed/KkXYF6nzKfA?si=Yl7sW907G5NN2mu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe id="video" class="video-responsive" width="560" height="315" src="https://www.youtube.com/embed/KkXYF6nzKfA?si=Yl7sW907G5NN2mu4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </section>
 
