--- a/project5.html
+++ b/project5.html
@@ -10,13 +10,13 @@
     
 </head>
 <body>
-        <header id="encabezado">
+        <header id="navbar">
             
                 <div class="logo">
                     <p>Jose Fernando Huarez</p>
                 </div>
 
-                <nav id="navbar">
+                <nav id="enlaces">
                     <ul>
                         <li>
                             <a href="#welcome-section">About</a>
@@ -44,7 +44,7 @@
 
                 <div class="projects-container container">
 
-                    <div class="project-title">
+                    <div class="project-tile">
                         <div class="project-foto">
                             <img src="./imgs/project2/julio-cesar.jpg" class="ajustar_ancho">
                             <div class="project-foto-leyenda">
@@ -54,7 +54,7 @@
                         <h3><a href="#">Project 1</a></h3>
                     </div>
 
-                    <div class="project-title">
+                    <div class="project-tile">
                         <div class="project-foto">
                             <img src="./imgs/project2/julio-cesar.jpg" class="ajustar_ancho">
                             <div class="project-foto-leyenda">
@@ -64,7 +64,7 @@
                         <h3><a href="#">Project 2</a></h3>
                     </div>
 
-                    <div class="project-title">
+                    <div class="project-tile">
                         <div class="project-foto">
                             <img src="./imgs/project2/julio-cesar.jpg" class="ajustar_ancho">
                             <div class="project-foto-leyenda">
@@ -86,7 +86,7 @@
                 <p>¡Si deseas contactarme, escribeme por una de mis redes!</p>
                 <div class="redes container">
                     <div class="red">
-                        <a target="_blank" href="https://www.linkedin.com/in/fernandohuarez/">
+                        <a id="profile-link" target="_blank" href="https://www.linkedin.com/in/fernandohuarez/">
                             <i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i>
                             <span>Linkedin</span>
                         </a>
